fix: Container titleAlign 값 변경
start, end -> left, right

(cherry picked from commit e85acf9e0fa8f05f25c86056441102e4ab8e0592)

--- a/frontend/src/components/@common/Container/Container.module.css
+++ b/frontend/src/components/@common/Container/Container.module.css
@@ -17,16 +17,16 @@
   margin: 0.875rem 0 3rem;
 }
 
+.title-align-left {
+  text-align: left;
+}
+
 .title-align-center {
   text-align: center;
 }
 
-.title-align-start {
-  text-align: start;
-}
-
-.title-align-end {
-  text-align: end;
+.title-align-right {
+  text-align: right;
 }
 
 @media screen and (max-width: 800px) {
